[gd_scene load_steps=10 format=2]

[ext_resource path="res://Effects/World/PixelShip.png" type="Texture" id=1]
[ext_resource path="res://Effects/World/Boat.gd" type="Script" id=2]
[ext_resource path="res://Effects/World/Water+ (1).png" type="Texture" id=3]
[ext_resource path="res://Effects/World/Arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/github-integration/fonts/Roboto-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="TileSet" id=1]
0/name = "Water+ (1).png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 48, 48, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Water+ (1).png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 48, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="CapsuleShape2D" id=4]
radius = 9.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.0

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 5 )

[node name="ElvenShip" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393201, 1, 0, 458736, 1, 0, 458737, 1, 0, 393228, 1, 0, 524271, 1, 0, 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 458764, 1, 0, 458765, 1, 0, 589808, 1, 0, 589809, 1, 0, 589810, 1, 0, 589811, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 1, 0, 589837, 1, 0, 720882, 1, 0, 720883, 1, 0, 720884, 0, 0, 720885, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 786420, 1, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 851958, 1, 0, 851959, 1, 0, 851960, 1, 0, 851961, 1, 0, 851962, 1, 0, 851963, 1, 0, 851964, 1, 0, 851965, 1, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0 )

[node name="PixelShip" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -221, 116, -218, 111, -196, 112, -198, 97, -190, 94, -187, 101, -189, 120, -172, 120, -157, 122, -151, 122, -141, 124, -132, 130, -120, 144, -117, 148, -108, 143, -121, 137, -125, 129, -131, 124, -131, 120, -124, 119, -115, 119, -110, 119, -100, 119, -96, 126, -91, 133, -88, 140, -83, 144, -81, 145, -76, 146, -59, 147, -50, 147, -36, 146, -21, 144, -13, 143, -2, 145, 1, 153, 3, 166, 3, 177, -35, 181, -56, 181, -81, 181, -103, 182, -120, 182, -140, 177, -159, 175, -173, 172, -185, 168, -196, 160, -201, 153, -202, 149, -207, 145, -216, 146, -218, 142, -218, 133, -216, 126, -218, 122 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 23, 176, 22, 144, 38, 146, 45, 146, 51, 140, 53, 143, 57, 148, 63, 148, 74, 144, 83, 132, 89, 126, 101, 125, 116, 124, 128, 124, 133, 124, 141, 123, 148, 119, 159, 113, 164, 110, 171, 103, 179, 94, 183, 88, 187, 83, 195, 78, 198, 75, 196, 74, 192, 68, 193, 60, 194, 53, 187, 39, 180, 32, 173, 28, 152, 18, 143, 7, 137, 2, 120, 4, 105, 4, 98, 4, 94, 4, 90, 7, 86, 10, 81, 14, 77, 18, 75, 21, 71, 26, 70, 29, 57, 30, 46, 31, 33, 31, 20, 31, 11, 31, 2, 31, -4, 31, -4, 81, -10, 84, -19, 80, -17, 31, -20, 32, -22, 37, -23, 40, -25, 43, -28, 43, -33, 40, -34, 37, -41, 38, -44, 38, -46, 36, -47, 31, -53, 30, -58, 30, -68, 30, -72, 30, -77, 29, -82, 29, -87, 28, -91, 28, -96, 28, -102, 28, -106, 29, -109, 29, -111, 27, -116, 23, -120, 19, -128, 15, -135, 9, -141, 6, -150, 4, -167, 7, -177, 7, -179, 6, -188, 9, -193, 18, -193, 27, -192, 31, -196, 33, -204, 33, -207, 34, -206, 52, -207, 102, -208, 109, -222, 112, -222, 96, -220, 71, -222, 18, -220, 9, -208, 8, -203, 7, -196, 4, -190, 0, -180, -1, -166, -2, -155, -2, -138, 0, -125, 11, -121, 14, -112, 21, -107, 24, -105, 21, -99, 18, -92, 18, -92, 19, -80, 22, -75, 22, -69, 22, -61, 23, -52, 24, -45, 24, -25, 23, -11, 22, -2, 22, 24, 22, 34, 22, 46, 22, 51, 17, 54, 19, 57, 20, 66, 20, 67, 19, 81, 10, 85, 4, 89, 0, 93, -3, 106, -4, 117, -4, 129, -4, 139, -3, 147, 2, 154, 10, 161, 18, 175, 26, 182, 29, 193, 42, 199, 49, 202, 52, 222, 54, 234, 52, 247, 50, 257, 53, 257, 61, 255, 66, 249, 67, 226, 72, 218, 76, 211, 89, 200, 108, 190, 121, 152, 155, 130, 166, 106, 173, 75, 178, 54, 177, 34, 177, 26, 177 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -115, 55, -141, 31, -144, 31, -144, 46, -143, 59, -143, 65, -144, 67, -151, 64, -153, 60, -159, 58, -160, 65, -160, 70, -158, 72, -157, 74, -147, 77, -143, 84, -143, 101, -143, 114, -142, 123, -135, 124, -135, 115, -135, 106, -135, 103, -136, 96, -137, 87, -137, 77, -137, 67, -133, 74, -133, 62, -129, 61, -117, 63, -115, 63 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 65, 61, 65, 55, 76, 51, 90, 34, 95, 32, 97, 94, 93, 98, 89, 99, 77, 111, 68, 117, 66, 115, 66, 111, 73, 108, 77, 103, 84, 97, 89, 93, 91, 90, 91, 77, 91, 68, 91, 59, 87, 61, 87, 63, 68, 63 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 32, 70, 28, 65, 28, 62, 30, 59, 32, 53, 35, 49, 41, 47, 45, 51, 46, 55, 40, 63, 40, 66, 40, 70, 41, 74, 35, 74, 33, 73 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 149, 79 )
shape = SubResource( 4 )

[node name="door" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, 141, 1, 148, 20, 148, 22, 141 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Arrow" parent="." instance=ExtResource( 4 )]
position = Vector2( 11, 133 )

[node name="Pirate1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pirate1"]
position = Vector2( 149, 80 )
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="Pirate1"]
position = Vector2( -327.857, 2 )
scale = Vector2( 3.14286, 1 )
polygon = PoolVector2Array( 153, 54, 152.045, 62, 156.818, 60, 173.045, 60, 174, 48, 153, 48 )

[node name="RichTextLabel" type="RichTextLabel" parent="Pirate1"]
margin_left = 155.0
margin_top = 52.0
margin_right = 229.0
margin_bottom = 62.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "What do you want?"

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( -232, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 149, 80 )
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="Area2D2"]
position = Vector2( 1, -1 )
polygon = PoolVector2Array( 154, 53, 153, 60, 157, 57, 238, 58, 236, 49, 153, 48 )

[node name="RichTextLabel" type="RichTextLabel" parent="Area2D2"]
margin_left = 156.0
margin_top = 47.0
margin_right = 238.0
margin_bottom = 59.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "I'm busy at the moment"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Pirate1" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Pirate1" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]

[editable path="Arrow"]
